<resources>
    <string name="app_name">Summary2</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name:</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="last_name">Last Name:</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="result">Result: </string>
    <string name="active_users">Active Users:</string>
    <string name="zero">0</string>
    <string name="removed_users">Removed Users: </string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="open">Open</string>
</resources>