<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="28dp"
    android:paddingEnd="28dp">

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="serif-monospace"
        android:text="@string/first_name"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/enter_firstname"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#86FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/last_name"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etFirstName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/enter_lastname"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#86FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvLastName" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/age"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etLastName" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_age"
        android:drawablePadding="12dp"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#86FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvAge" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etAge" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#86FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <TextView
        android:id="@+id/tvActionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvAction"
        app:layout_constraintStart_toEndOf="@id/tvAction" />

    <TextView
        android:id="@+id/tvActiveUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/active_users"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvAction"
        app:layout_constraintTop_toBottomOf="@id/tvAction" />

    <TextView
        android:id="@+id/tvActiveUsersResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:text="@string/zero"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvActiveUsers"
        app:layout_constraintStart_toEndOf="@id/tvActiveUsers" />

    <TextView
        android:id="@+id/tvRemovedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/removed_users"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvActiveUsers"
        app:layout_constraintTop_toBottomOf="@id/tvActiveUsers" />

    <TextView
        android:id="@+id/tvRemovedUsersResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:text="@string/zero"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvRemovedUsers"
        app:layout_constraintStart_toEndOf="@id/tvRemovedUsers" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvRemovedUsers"
        app:layout_constraintTop_toBottomOf="@id/tvRemovedUsers" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/error_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnUpdate"
        app:layout_constraintStart_toEndOf="@id/btnAdd" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/open"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnRemove"
        app:layout_constraintStart_toStartOf="@id/btnRemove"
        app:layout_constraintEnd_toEndOf="@id/btnRemove"/>


</androidx.constraintlayout.widget.ConstraintLayout>