<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvFirstNameTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/first_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvFirstNameTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastNameTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/last_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvFirstNameTitle"
        app:layout_constraintTop_toBottomOf="@id/tvFirstNameTitle" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvLastNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLastNameTitle" />

    <TextView
        android:id="@+id/tvAgeTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/age"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvLastNameTitle"
        app:layout_constraintTop_toBottomOf="@id/tvLastNameTitle" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvAgeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAgeTitle" />

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/email"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvAgeTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAgeTitle" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEmailTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>